dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

AC_INIT(messages/Makefile.am)
AM_INIT_AUTOMAKE(kde-i18n-fr, "3.5.10")
AM_CONFIG_HEADER(config.h)
AC_SUBST(AUTODIRS)
AM_KDE_WITH_NLS
AC_CREATE_KFSSTND(default)
KDE_SET_PREFIX
AC_SUBST_KFSSTND
AC_PROG_INSTALL
AC_PROG_LN_S
KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ data/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/kanagram/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/khangman/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/khangman/fr/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/kturtle/Makefile ])
AC_CONFIG_FILES([ data/kdegames/Makefile ])
AC_CONFIG_FILES([ data/kdegames/ktuberling/Makefile ])
AC_CONFIG_FILES([ docs/Makefile ])
AC_CONFIG_FILES([ docs/common/Makefile ])
AC_CONFIG_FILES([ docs/kdeaccessibility/Makefile ])
AC_CONFIG_FILES([ docs/kdeaccessibility/kmag/Makefile ])
AC_CONFIG_FILES([ docs/kdeaccessibility/kmousetool/Makefile ])
AC_CONFIG_FILES([ docs/kdeaccessibility/kmouth/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/kate-plugins/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/kicker-applets/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/babel/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/crashes/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/dirfilter/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/domtreeviewer/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/fsview/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/imgallery/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/khtmlsettings/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/kuick/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/mediaplayer/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/smbmounter/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/uachanger/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/validators/Makefile ])
AC_CONFIG_FILES([ docs/kdeaddons/konq-plugins/webarchiver/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/kcron/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/kdat/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/knetworkconf/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/kpackage/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/ksysv/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/kuser/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/kwuftpd/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/kxconfig/Makefile ])
AC_CONFIG_FILES([ docs/kdeadmin/lilo-config/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/faq/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/glossary/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kappfinder/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kate/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/arts/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/background/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/bell/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/cache/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/clock/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/colors/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/cookies/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/crypto/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/desktop/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/desktopbehavior/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/ebrowsing/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/email/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/energy/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/filemanager/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/filetypes/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/fonts/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/helpindex/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/icons/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmaccess/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmcss/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmfontinst/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmkonsole/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmlaunch/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmnotify/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmsmserver/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmstyle/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmtaskbar/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kdm/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/keyboard/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/keys/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/khtml/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kthememgr/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kwindecoration/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/language/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/mouse/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/netpref/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/panel/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/panelappearance/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/passwords/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/performance/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/proxy/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/screensaver/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/smb/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/spellchecking/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/useragent/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/windowmanagement/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdcop/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdebugdialog/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdeprint/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdesu/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdm/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kfind/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/faq/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/glossary/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/quickstart/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/userguide/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/visualdict/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kicker/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/cdinfo/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/devices/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/dma/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/interrupts/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/ioports/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/memory/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/nics/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/opengl/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/partitions/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/pci/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/pcmcia/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/processor/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/protocols/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/samba/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/scsi/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/sound/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/usb/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/xserver/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kioslave/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/klipper/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kmenuedit/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/knetattach/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kompmgr/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/konqueror/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/konsole/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kpager/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/ksplashml/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/ksysguard/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kwrite/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kxkb/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/quickstart/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/userguide/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/visualdict/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/blinken/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kalzium/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kanagram/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kbruch/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/keduca/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kgeography/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/khangman/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kig/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/klettres/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kmathtool/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kmessedwords/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kmplot/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kpercentage/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kstars/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/ktouch/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kturtle/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kverbos/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kvoctrain/Makefile ])
AC_CONFIG_FILES([ docs/kdeedu/kwordquiz/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/atlantik/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kasteroids/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/katomic/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kbackgammon/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kbattleship/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kblackbox/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kbounce/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kenolaba/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kfouleggs/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kgoldrunner/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kjumpingcube/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/klickety/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/klines/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kmahjongg/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kmines/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kolf/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/konquest/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kpat/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kpoker/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kreversi/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ksame/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kshisen/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ksirtet/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ksmiletris/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ksnake/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ksokoban/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kspaceduel/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ktron/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/ktuberling/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/kwin4/Makefile ])
AC_CONFIG_FILES([ docs/kdegames/lskat/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kamera/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kcoloredit/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kdvi/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kgamma/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kghostview/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kiconedit/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kolourpaint/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kooka/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kpdf/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kpovmodeler/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kruler/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/ksnapshot/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kuickshow/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kview/Makefile ])
AC_CONFIG_FILES([ docs/kdelibs/Makefile ])
AC_CONFIG_FILES([ docs/kdelibs/kdelibs/Makefile ])
AC_CONFIG_FILES([ docs/kdelibs/kspell/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/artsbuilder/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/artsbuilder/images/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/juk/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kaboodle/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kcontrol/kmixcfg/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kio_audiocd/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kioslave/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kmid/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kmix/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/krec/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kscd/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/noatun/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kcontrol/kcmktalkd/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kcontrol/lanbrowser/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kdict/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kget/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kmail/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/knewsticker/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/knode/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kopete/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kpf/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kppp/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/krdc/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/krfb/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/ksirc/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/ktalkd/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/kwifimanager/Makefile ])
AC_CONFIG_FILES([ docs/kdenetwork/lisa/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/akregator/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kaddressbook/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kalarm/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kandy/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/karm/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kcontrol/kalarmd/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kleopatra/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kmail/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/knode/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/knotes/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/konsolekalendar/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/kontact/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/korganizer/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/korn/Makefile ])
AC_CONFIG_FILES([ docs/kdepim/ktnef/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/cervisia/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/kbabel/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/kbugbuster/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/kcachegrind/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/kompare/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/scripts/Makefile ])
AC_CONFIG_FILES([ docs/kdesdk/umbrello/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/amor/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/kmoon/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/kodo/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/kteatime/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/kweather/Makefile ])
AC_CONFIG_FILES([ docs/kdetoys/kworldclock/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/KRegExpEditor/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/ark/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcalc/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcharselect/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/kcmlowbatcrit/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/kcmlowbatwarn/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/laptop/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/powerctrl/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kdelirc/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kdelirc/irkick/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kdelirc/kcmlirc/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kdf/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kedit/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kfloppy/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kgpg/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/khexedit/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kinfocenter/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kinfocenter/blockdevices/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kjots/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/ksim/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/ktimer/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kwallet/Makefile ])
AC_CONFIG_FILES([ docs/kdevelop/Makefile ])
AC_CONFIG_FILES([ docs/kdevelop/kdearch/Makefile ])
AC_CONFIG_FILES([ docs/kdevelop/kdevelop/Makefile ])
AC_CONFIG_FILES([ docs/kdewebdev/Makefile ])
AC_CONFIG_FILES([ docs/kdewebdev/klinkstatus/Makefile ])
AC_CONFIG_FILES([ docs/kdewebdev/kxsldbg/Makefile ])
AC_CONFIG_FILES([ docs/kdewebdev/quanta/Makefile ])
AC_CONFIG_FILES([ docs/quanta/Makefile ])
AC_CONFIG_FILES([ docs/quanta/kxsldbg/Makefile ])
AC_CONFIG_FILES([ messages/Makefile ])
AC_CONFIG_FILES([ messages/kdeaccessibility/Makefile ])
AC_CONFIG_FILES([ messages/kdeaddons/Makefile ])
AC_CONFIG_FILES([ messages/kdeadmin/Makefile ])
AC_CONFIG_FILES([ messages/kdeartwork/Makefile ])
AC_CONFIG_FILES([ messages/kdebase/Makefile ])
AC_CONFIG_FILES([ messages/kdeedu/Makefile ])
AC_CONFIG_FILES([ messages/kdegames/Makefile ])
AC_CONFIG_FILES([ messages/kdegraphics/Makefile ])
AC_CONFIG_FILES([ messages/kdelibs/Makefile ])
AC_CONFIG_FILES([ messages/kdemultimedia/Makefile ])
AC_CONFIG_FILES([ messages/kdenetwork/Makefile ])
AC_CONFIG_FILES([ messages/kdepim/Makefile ])
AC_CONFIG_FILES([ messages/kdesdk/Makefile ])
AC_CONFIG_FILES([ messages/kdetoys/Makefile ])
AC_CONFIG_FILES([ messages/kdeutils/Makefile ])
AC_CONFIG_FILES([ messages/kdevelop/Makefile ])
AC_CONFIG_FILES([ messages/kdewebdev/Makefile ])
AC_OUTPUT
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test x$GXX = "xyes" -a x$kde_have_gcc_visibility = "xyes" -a x$kde_cv_val_qt_gcc_visibility_patched = "xno"; then
  echo ""
  echo "Your GCC supports symbol visibility, but the patch for Qt supporting visibility"
  echo "was not included. Therefore, GCC symbol visibility support remains disabled."
  echo ""
  echo "For better performance, consider including the Qt visibility supporting patch"
  echo "located at:"
  echo ""
  echo "http://bugs.kde.org/show_bug.cgi?id=109386"
  echo ""
  echo "and recompile all of Qt and KDE. Note, this is entirely optional and"
  echo "everything will continue to work just fine without it."
  echo ""
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
