txt_DATA = animals_pri.kvtml \
           divises_sec.kvtml \
           informatica_pri.kvtml \
           professions_pri.kvtml \
           vestit_pri.kvtml \
           biografies_sec.kvtml \
           espai_pri.kvtml \
           invents_sec.kvtml \
           provincies_sec.kvtml \
           capitals_del_mon_sec.kvtml \
           esports_sec.kvtml \
           transports_pri.kvtml \
           comarques_sec.kvtml \
           fruites_pri.kvtml \
           objectes_pri.kvtml \
           verdures_pri.kvtml

txtdir = $(kde_datadir)/kanagram/data/ca
