txt_DATA = fletxa.logo rinxol.logo quadrat.logo taulamultiplicar.logo colorspaper.logo nomaleatori.logo aprenquadrats.logo triangle.logo flor.logo
txtdir = $(kde_datadir)/kturtle/examples/ca

xml_DATA = logohighlightstyle.ca.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.ca.xml
keywordsdir = $(kde_datadir)/kturtle/data

EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)
