
# add here all files
wav_DATA = briller.wav cigar.wav hat.wav kartoffelfyr.wav \
	mund.wav naese.wav oeje.wav oejenbryn.wav oere.wav \
	oerering.wav overskaeg.wav politiskilt.wav sloejfe.wav \
	solbriller.wav ur.wav \
	halsbaand.wav halstoerklaede.wav haar.wav horn.wav \
	pingvin.wav slips.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
wavdir = $(kde_datadir)/ktuberling/sounds/da

