txt_DATA = beispiel1.logo locken.logo nikolaus.logo quadrat.logo papierfarben.logo zufallsname.logo dreieck.logo pfeil.logo einmaleins.logo quadrateimkreis.logo

txtdir = $(kde_datadir)/kturtle/examples/de_DE

xml_DATA = logohighlightstyle.de_DE.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.de_DE.xml
keywordsdir = $(kde_datadir)/kturtle/data
EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)

