
# add here all files
wav_DATA = abzeichen.wav augenbraue.wav auge.wav brille.wav \
	    fliege.wav haare.wav hut.wav ohr.wav ohrring.wav \
	    schnurrbart.wav uhr.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
wavdir = $(kde_datadir)/ktuberling/sounds/de

