txt_DATA = triangle.logo square.logo curly.logo example1.logo
txtdir = $(kde_datadir)/kturtle/examples/en_GB

xml_DATA = logohighlightstyle.en_GB.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.en_GB.xml
keywordsdir = $(kde_datadir)/kturtle/data
EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)

