txt_DATA = cartelito.logo collar.logo colores.logo cuadrado.logo lastablas.logo triangulo.logo triangulos.logo flecha.logo flor.logo rulitos.logo tunombre.logo
txtdir = $(kde_datadir)/kturtle/examples/es

xml_DATA = logohighlightstyle.es.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.es.xml
keywordsdir = $(kde_datadir)/kturtle/data
EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)

