
# add here all files
wav_DATA = anteojos.wav boca.wav cigarro.wav gafasdesol.wav \
            lazo.wav ojo.wav pendiente.wav sombrero.wav \
            bigote.wav ceja.wav eltipodelapatata.wav insignia.wav \
            nariz.wav oreja.wav reloj.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
wavdir = $(kde_datadir)/ktuberling/sounds/es

