txt_DATA = triangle.logo carre.logo enroule.logo exemple1.logo
txtdir = $(kde_datadir)/kturtle/examples/fr_FR

xml_DATA = logohighlightstyle.fr_FR.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.fr_FR.xml
keywordsdir = $(kde_datadir)/kturtle/data
EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)

