txt_DATA = \
	colorisfondo.logo \
	fiore.logo \
	freccia.logo \
	nomicasuali.logo \
	pub.logo \
	quadrati.logo \
	quadrato.logo \
	riccioli.logo \
	tabelline.logo \
	triangoli.logo \
	triangolo.logo
txtdir = $(kde_datadir)/kturtle/examples/it

xml_DATA = logohighlightstyle.it.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.it.xml
keywordsdir = $(kde_datadir)/kturtle/data

EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)
